src/multimedia/libqimagecapture.h

typedef struct QImageCapture QImageCapture;
typedef struct QMediaCaptureSession QMediaCaptureSession;
typedef struct QMediaMetaData QMediaMetaData;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QSize QSize;
QImageCapture* QImageCapture_new();
QImageCapture* QImageCapture_new2(QObject* parent);
QMetaObject* QImageCapture_MetaObject(const QImageCapture* self);
void* QImageCapture_Metacast(QImageCapture* self, const char* param1);
int QImageCapture_Metacall(QImageCapture* self, int param1, int param2, void** param3);
libqt_string QImageCapture_Tr(const char* s);
bool QImageCapture_IsAvailable(const QImageCapture* self);
QMediaCaptureSession* QImageCapture_CaptureSession(const QImageCapture* self);
int QImageCapture_Error(const QImageCapture* self);
libqt_string QImageCapture_ErrorString(const QImageCapture* self);
bool QImageCapture_IsReadyForCapture(const QImageCapture* self);
int QImageCapture_FileFormat(const QImageCapture* self);
void QImageCapture_SetFileFormat(QImageCapture* self, int format);
libqt_list /* of int */ QImageCapture_SupportedFormats();
libqt_string QImageCapture_FileFormatName(int c);
libqt_string QImageCapture_FileFormatDescription(int c);
QSize* QImageCapture_Resolution(const QImageCapture* self);
void QImageCapture_SetResolution(QImageCapture* self, QSize* resolution);
void QImageCapture_SetResolution2(QImageCapture* self, int width, int height);
int QImageCapture_Quality(const QImageCapture* self);
void QImageCapture_SetQuality(QImageCapture* self, int quality);
QMediaMetaData* QImageCapture_MetaData(const QImageCapture* self);
void QImageCapture_SetMetaData(QImageCapture* self, QMediaMetaData* metaData);
void QImageCapture_AddMetaData(QImageCapture* self, QMediaMetaData* metaData);
int QImageCapture_CaptureToFile(QImageCapture* self);
int QImageCapture_Capture(QImageCapture* self);
void QImageCapture_Connect_ErrorChanged(QImageCapture* self, intptr_t slot);
void QImageCapture_Connect_ErrorOccurred(QImageCapture* self, intptr_t slot);
void QImageCapture_Connect_ReadyForCaptureChanged(QImageCapture* self, intptr_t slot);
void QImageCapture_Connect_MetaDataChanged(QImageCapture* self, intptr_t slot);
void QImageCapture_Connect_FileFormatChanged(QImageCapture* self, intptr_t slot);
void QImageCapture_Connect_QualityChanged(QImageCapture* self, intptr_t slot);
void QImageCapture_Connect_ResolutionChanged(QImageCapture* self, intptr_t slot);
void QImageCapture_Connect_ImageExposed(QImageCapture* self, intptr_t slot);
void QImageCapture_Connect_ImageCaptured(QImageCapture* self, intptr_t slot);
void QImageCapture_Connect_ImageMetadataAvailable(QImageCapture* self, intptr_t slot);
void QImageCapture_Connect_ImageAvailable(QImageCapture* self, intptr_t slot);
void QImageCapture_Connect_ImageSaved(QImageCapture* self, intptr_t slot);
libqt_string QImageCapture_Tr2(const char* s, const char* c);
libqt_string QImageCapture_Tr3(const char* s, const char* c, int n);
int QImageCapture_CaptureToFile1(QImageCapture* self, libqt_string location);
void QImageCapture_Delete(QImageCapture* self);