src/qt/multimedia/libqimagecapture.bf

	
	public int32 CaptureToFile1(String location)
	{
		return this.handle.CaptureToFile1(location);
	}
	
	public virtual bool Event(IQEvent event)
	{
		return this.handle.Event(event);
	}
	
	public virtual bool EventFilter(IQObject watched, IQEvent event)
	{
		return this.handle.EventFilter(watched, event);
	}
	
	public libqt_string ObjectName()
	{
		return this.handle.ObjectName();
	}
	
	public void SetObjectName(char8* name)
	{
		this.handle.SetObjectName(name);
	}
	
	public bool IsWidgetType()
	{
		return this.handle.IsWidgetType();
	}
	
	public bool IsWindowType()
	{
		return this.handle.IsWindowType();
	}
	
	public bool IsQuickItemType()
	{
		return this.handle.IsQuickItemType();
	}
	
	public bool SignalsBlocked()
	{
		return this.handle.SignalsBlocked();
	}
	
	public bool BlockSignals(bool b)
	{
		return this.handle.BlockSignals(b);
	}
	
	public void* Thread()
	{
		return this.handle.Thread();
	}
	
	public void MoveToThread(IQThread thread)
	{
		this.handle.MoveToThread(thread);
	}
	
	public int32 StartTimer(int32 interval)
	{
		return this.handle.StartTimer(interval);
	}
	
	public void KillTimer(int32 id)
	{
		this.handle.KillTimer(id);
	}
	
	public void*[] Children()
	{
		return this.handle.Children();
	}
	
	public void SetParent(IQObject parent)
	{
		this.handle.SetParent(parent);
	}
	
	public void InstallEventFilter(IQObject filterObj)
	{
		this.handle.InstallEventFilter(filterObj);
	}
	
	public void RemoveEventFilter(IQObject obj)
	{
		this.handle.RemoveEventFilter(obj);
	}
	
	public static void Connect(IQObject sender, IQMetaMethod signal, IQObject receiver, IQMetaMethod method)
	{
		QImageCapturePtr.Connect(sender, signal, receiver, method);
	}
	
	public void Connect2(IQObject sender, char8* signal, char8* member)
	{
		this.handle.Connect2(sender, signal, member);
	}
	
	public static bool Disconnect(IQObject sender, IQMetaMethod signal, IQObject receiver, IQMetaMethod member)
	{
		return QImageCapturePtr.Disconnect(sender, signal, receiver, member);
	}
	
	public static bool DisconnectWithQMetaObjectConnection(QMetaObject__ConnectionPtr param1)
	{
		return QImageCapturePtr.DisconnectWithQMetaObjectConnection(param1);
	}
	
	public void DumpObjectTree()
	{
		this.handle.DumpObjectTree();
	}
	
	public void DumpObjectInfo()
	{
		this.handle.DumpObjectInfo();
	}
	
	public bool SetProperty(char8* name, IQVariant value)
	{
		return this.handle.SetProperty(name, value);
	}
	
	public void Property(char8* name)
	{
		this.handle.Property(name);
	}
	
	public libqt_string[] DynamicPropertyNames()
	{
		return this.handle.DynamicPropertyNames();
	}
	
	public void* BindingStorage()
	{
		return this.handle.BindingStorage();
	}
	
	public void* BindingStorage2()
	{
		return this.handle.BindingStorage2();
	}
	
	public void* Parent()
	{
		return this.handle.Parent();
	}
	
	public bool Inherits(char8* classname)
	{
		return this.handle.Inherits(classname);
	}
	
	public void DeleteLater()
	{
		this.handle.DeleteLater();
	}
	
	public int32 StartTimer2(int32 interval, int64 timerType)
	{
		return this.handle.StartTimer2(interval, timerType);
	}
	
	public static void Connect5(IQObject sender, IQMetaMethod signal, IQObject receiver, IQMetaMethod method, int64 typeVal)
	{
		QImageCapturePtr.Connect5(sender, signal, receiver, method, typeVal);
	}
	
	public void Connect4(IQObject sender, char8* signal, char8* member, int64 typeVal)
	{
		this.handle.Connect4(sender, signal, member, typeVal);
	}
	
}
extension CQt
{
	[LinkName("QImageCapture_new")]
	public static extern void* QImageCapture_new();
	[LinkName("QImageCapture_new2")]
	public static extern void* QImageCapture_new2(void* parent);
	[LinkName("QImageCapture_MetaObject")]
	public static extern void* QImageCapture_MetaObject(void* c_this);
	[LinkName("QImageCapture_Metacast")]
	public static extern void* QImageCapture_Metacast(void* c_this, char8* param1);
	[LinkName("QImageCapture_Metacall")]
	public static extern int32 QImageCapture_Metacall(void* c_this, int64 param1, int32 param2, void* param3);
	[LinkName("QImageCapture_Tr")]
	public static extern libqt_string QImageCapture_Tr(char8* s);
	[LinkName("QImageCapture_IsAvailable")]
	public static extern bool QImageCapture_IsAvailable(void* c_this);
	[LinkName("QImageCapture_CaptureSession")]
	public static extern void* QImageCapture_CaptureSession(void* c_this);
	[LinkName("QImageCapture_Error")]
	public static extern int64 QImageCapture_Error(void* c_this);
	[LinkName("QImageCapture_ErrorString")]
	public static extern libqt_string QImageCapture_ErrorString(void* c_this);
	[LinkName("QImageCapture_IsReadyForCapture")]
	public static extern bool QImageCapture_IsReadyForCapture(void* c_this);
	[LinkName("QImageCapture_FileFormat")]
	public static extern int64 QImageCapture_FileFormat(void* c_this);
	[LinkName("QImageCapture_SetFileFormat")]
	public static extern void QImageCapture_SetFileFormat(void* c_this, int64 format);
	[LinkName("QImageCapture_SupportedFormats")]
	public static extern int64[] QImageCapture_SupportedFormats();
	[LinkName("QImageCapture_FileFormatName")]
	public static extern libqt_string QImageCapture_FileFormatName(int64 c);
	[LinkName("QImageCapture_FileFormatDescription")]
	public static extern libqt_string QImageCapture_FileFormatDescription(int64 c);
	[LinkName("QImageCapture_Resolution")]
	public static extern void QImageCapture_Resolution(void* c_this);
	[LinkName("QImageCapture_SetResolution")]
	public static extern void QImageCapture_SetResolution(void* c_this, void* resolution);
	[LinkName("QImageCapture_SetResolution2")]
	public static extern void QImageCapture_SetResolution2(void* c_this, int32 width, int32 height);
	[LinkName("QImageCapture_Quality")]
	public static extern int64 QImageCapture_Quality(void* c_this);
	[LinkName("QImageCapture_SetQuality")]
	public static extern void QImageCapture_SetQuality(void* c_this, int64 quality);
	[LinkName("QImageCapture_MetaData")]
	public static extern void QImageCapture_MetaData(void* c_this);
	[LinkName("QImageCapture_SetMetaData")]
	public static extern void QImageCapture_SetMetaData(void* c_this, void* metaData);
	[LinkName("QImageCapture_AddMetaData")]
	public static extern void QImageCapture_AddMetaData(void* c_this, void* metaData);
	[LinkName("QImageCapture_CaptureToFile")]
	public static extern int32 QImageCapture_CaptureToFile(void* c_this);
	[LinkName("QImageCapture_Capture")]
	public static extern int32 QImageCapture_Capture(void* c_this);
	[LinkName("QImageCapture_Connect_ErrorChanged")]
	public static extern void QImageCapture_Connect_ErrorChanged(void* c_this, c_intptr slot);
	[LinkName("QImageCapture_Connect_ErrorOccurred")]
	public static extern void QImageCapture_Connect_ErrorOccurred(void* c_this, c_intptr slot);
	[LinkName("QImageCapture_Connect_ReadyForCaptureChanged")]
	public static extern void QImageCapture_Connect_ReadyForCaptureChanged(void* c_this, c_intptr slot);
	[LinkName("QImageCapture_Connect_MetaDataChanged")]
	public static extern void QImageCapture_Connect_MetaDataChanged(void* c_this, c_intptr slot);
	[LinkName("QImageCapture_Connect_FileFormatChanged")]
	public static extern void QImageCapture_Connect_FileFormatChanged(void* c_this, c_intptr slot);
	[LinkName("QImageCapture_Connect_QualityChanged")]
	public static extern void QImageCapture_Connect_QualityChanged(void* c_this, c_intptr slot);
	[LinkName("QImageCapture_Connect_ResolutionChanged")]
	public static extern void QImageCapture_Connect_ResolutionChanged(void* c_this, c_intptr slot);
	[LinkName("QImageCapture_Connect_ImageExposed")]
	public static extern void QImageCapture_Connect_ImageExposed(void* c_this, c_intptr slot);
	[LinkName("QImageCapture_Connect_ImageCaptured")]
	public static extern void QImageCapture_Connect_ImageCaptured(void* c_this, c_intptr slot);
	[LinkName("QImageCapture_Connect_ImageMetadataAvailable")]
	public static extern void QImageCapture_Connect_ImageMetadataAvailable(void* c_this, c_intptr slot);
	[LinkName("QImageCapture_Connect_ImageAvailable")]
	public static extern void QImageCapture_Connect_ImageAvailable(void* c_this, c_intptr slot);
	[LinkName("QImageCapture_Connect_ImageSaved")]
	public static extern void QImageCapture_Connect_ImageSaved(void* c_this, c_intptr slot);
	[LinkName("QImageCapture_Tr2")]
	public static extern libqt_string QImageCapture_Tr2(char8* s, char8* c);
	[LinkName("QImageCapture_Tr3")]
	public static extern libqt_string QImageCapture_Tr3(char8* s, char8* c, int32 n);
	[LinkName("QImageCapture_CaptureToFile1")]
	public static extern int32 QImageCapture_CaptureToFile1(void* c_this, libqt_string location);
	/// Delete this object from C++ memory
	[LinkName("QImageCapture_Delete")]
	public static extern void QImageCapture_Delete(void* self);
}